# x12

./: .gitignore  LICENSE.md  README.md  code_of_conduct.md  contributing.md  pyproject.toml  requirements_dev.in  requirements_dev.txt  setup.py
.github/workflows/: ci.yaml
tests/: test_analyze.py  test_loop.py  test_parse.py  test_schema.py  test_segment.py
x12/: __init__.py
x12/common/: colors.py
x12/parser/: analyze.py  context.py  loop.py  parse.py  segment.py
x12/schema/: schema.py
