[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spaceavocado-x12"
version = "1.0.0"
description = "Simple X12 files parser."
readme = "README.md"
authors = [{ name = "David Horak", email = "info@davidhorak.com" }]
license = { file = "LICENSE.md", content-type="text/markdown" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
keywords = ["x12", "parser", "schema"]
requires-python = ">=3.7"

[project.urls]
repository = "https://github.com/spaceavocado/x12"